--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "count-words": "^1.0.13",
     "install": "^0.13.0",
     "npm": "^6.14.11",
+    "re-resizable": "^6.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-wordcloud": "^1.2.7",
+    "tippy.js": "^6.2.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
