--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_LOCAL_SERVER=http://localhost:5000
-REACT_APP_API_ENDPOINT=https://api-server-twitter-elastic-koa.vercel.app
+REACT_APP_API_ENDPOINT=https://blooming-basin-16625.herokuapp.com
